--- a/src/App.css
+++ b/src/App.css
@@ -8,29 +8,11 @@
     padding: 0;
 }
 
-
-
-.SearchBar {
-    /*background-color: teal;*/
-    flex-grow: 1;
-    padding-top:17.5px;
-    padding-bottom:17.5px;    
+.Nav {
+    position: fixed;
+    top: 0;
 }
 
-.Form {
-    border-top-left-radius: 25px !important;
-    border-bottom-left-radius: 25px !important;
-    border-top-right-radius: 25px !important;
-    border-bottom-right-radius: 25px !important;
-    width: 87.5%;
-    height: 100%;    
-    border: #2D2D2D;
-    padding-right: 20px; 
-    padding-left: 20px; 
+.Footer{
+    margin-top: -600px;
 }
-
-
-
-
-
-
